ROC curve plotted

--- a/AI-Dermatologist.ipynb
+++ b/AI-Dermatologist.ipynb
@@ -7,7 +7,7 @@
     "# AI-Dermotologist\n",
     "\n",
     "This is a mini project that aims to build a AI classifier for deadly **skin cancer diagnose**. <br>\n",
-    "The ultimate goal is distinguish **maglignant [Melanoma]**(https://www.skincancer.org/skin-cancer-information/melanoma) (a.k.a black cancer, which is one of the most deadly cancer with only 15%-20% of survival rate) from **benign lesions** such as [nevus](http://missinglink.ucsf.edu/lm/dermatologyglossary/nevus.html) and [seborrheic keratoses](https://www.aad.org/public/diseases/bumps-and-growths/seborrheic-keratoses). <br>\n",
+    "The ultimate goal is distinguish **maglignant** [Melanoma](https://www.skincancer.org/skin-cancer-information/melanoma) (a.k.a black cancer, which is one of the most deadly cancer with only 15%-20% of survival rate) from **benign lesions** such as [nevus](http://missinglink.ucsf.edu/lm/dermatologyglossary/nevus.html) and [seborrheic keratoses](https://www.aad.org/public/diseases/bumps-and-growths/seborrheic-keratoses). <br>\n",
     "The big motivation behind this project is that if Melanoma could be detected in its *early stage*, chances of cure will be much more optimistic. However, human dermotologists are not super accurate with this diagnose and there is a shortage per capita of them. <br>\n",
     "The training, validation and test data of this project are pulled from the [ICIC 2017: Skin Lesion Analysis Towards Melanoma Detection](https://challenge.kitware.com/#challenge/583f126bcad3a51cc66c8d9a) challenge. In addition, this [paper](https://arxiv.org/pdf/1710.05006.pdf) provides a very comprehensive review of the state of the art approaches. <br>\n",
     "Many of the techniques implemented in this notebook are inspired by the **[RECOD Titans at ISIC Chanlenge paper](https://arxiv.org/pdf/1710.05006.pdf)**(by Menegola A, Tavares J, Fornaciali M, Li LT, Avila S, Valle E. ) including *model selections, data augmentations, evaluation and SVM meta-learner.*"
@@ -355,7 +355,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -642,8 +644,7 @@
    ],
    "source": [
     "top_3_accuracy = partial(top_k_accuracy, k=3)\n",
-    "learn = cnn_learner(data, models.resnet34, metrics = [accuracy, top_3_accuracy])\n",
-    "learn"
+    "learn = cnn_learner(data, models.resnet34, metrics = [accuracy, top_3_accuracy])"
    ]
   },
   {
@@ -1496,7 +1497,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2498,13 +2501,6 @@
     "#show how the model is doing with our training dataset\n",
     "learn.show_results(ds_type=DatasetType.Train, rows=4, figsize=(8,10))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -5961,7 +5957,7 @@
    "cell_type": "code",
    "execution_count": 252,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -9762,20 +9758,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 326,
    "metadata": {},
    "outputs": [],
@@ -9871,33 +9853,6 @@
     "plt.legend(loc=\"lower right\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 319,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1984, 3)"
-      ]
-     },
-     "execution_count": 319,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
